@@ -20,6 +20,7 @@ Bug Fixes:
 
 CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
 CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()
+CAY-2454 Impossible to read the whole text about problems in the validation window, when the size of this window is small
 
 ----------------------------------
 Release: 4.1.M2
